--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,7 @@ Build-Depends: bison,
                libevent-dev,
                liblz4-dev,
                libncurses5-dev (>= 5.0-6),
-               libnuma-dev,
+               libnuma-dev [amd64 arm64 i386 mips mips64el mipsel powerpc ppc64el],
                libwrap0-dev (>= 7.6-8.3),
                lsb-release,
                perl,
