--- a/debian/rules
+++ b/debian/rules
@@ -73,6 +73,7 @@ configure-stamp:
 		-DWITH_LIBWRAP=ON \
 		-DWITH_ZLIB=system \
 		-DWITH_EDITLINE=system \
+		-DWITH_LIBEVENT=system \
 		-DWITH_SSL=bundled \
 		-DWITH_BOOST=../boost \
 		-DCOMPILATION_COMMENT="($(DISTRIBUTION))" \
