--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: mysql-5.7
 Section: database
 Priority: optional
-Maintainer: Debian MySQL Maintainers <pkg-mysql-maint@lists.alioth.debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Debian MySQL Maintainers <pkg-mysql-maint@lists.alioth.debian.org>
 Uploaders: Norbert Tretkowski <norbert@tretkowski.de>,
            Clint Byrum <clint@ubuntu.com>,
            James Page <jamespage@debian.org>,
@@ -17,7 +18,6 @@ Build-Depends: bison,
                libedit-dev,
                libevent-dev,
                liblz4-dev,
-               libmecab-dev,
                libncurses5-dev (>= 5.0-6),
                libnuma-dev [amd64 arm64 i386 mips mips64el mipsel powerpc ppc64el],
                libwrap0-dev (>= 7.6-8.3),
@@ -26,10 +26,10 @@ Build-Depends: bison,
                po-debconf,
                psmisc,
                zlib1g-dev (>= 1:1.1.3-5)
-Standards-Version: 3.9.8
+Standards-Version: 3.9.6
 Homepage: http://dev.mysql.com/
-Vcs-Git: https://anonscm.debian.org/pkg-mysql/mysql.git -b mysql-5.7/debian/master
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-mysql/mysql.git
+Vcs-Git: git://anonscm.debian.org/pkg-mysql/mysql-5.7.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-mysql/mysql-5.7.git
 XS-Testsuite: autopkgtest
 
 Package: libmysqlclient20
@@ -75,6 +75,29 @@ Description: MySQL database development files
  ease of use.
  .
  This package includes development libraries and header files.
+
+Package: mysql-common
+Architecture: all
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Provides: mysql-common-5.6
+Conflicts: mariadb-server-5.5,
+           mysql-common-5.6,
+           mysql-server-5.5,
+           percona-xtradb-cluster-common-5.5
+Replaces: mariadb-server-5.5,
+          mysql-common-5.6,
+          mysql-server-5.5,
+          percona-xtradb-cluster-common-5.5
+Breaks: mariadb-common (<< 10.0.20-3~)
+Multi-Arch: foreign
+Description: MySQL database common files, e.g. /etc/mysql/my.cnf
+ MySQL is a fast, stable and true multi-user, multi-threaded SQL database
+ server. SQL (Structured Query Language) is the most popular database query
+ language in the world. The main goals of MySQL are speed, robustness and
+ ease of use.
+ .
+ This package includes files needed by all versions of the client library,
+ e.g. /etc/mysql/my.cnf.
 
 Package: mysql-client-core-5.7
 Architecture: any
@@ -147,6 +170,7 @@ Recommends: libhtml-template-perl
 Suggests: mailx, tinyca
 Pre-Depends: adduser (>= 3.40), debconf, mysql-common (>= 5.5)
 Depends: bsdutils,
+         initscripts,
          lsb-base (>= 3.0-10),
          mysql-client-5.7 (>= ${binary:Version}),
          mysql-common (>= 5.6.22-1~),
