--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,3 @@
 [DEFAULT]
-debian-branch	= mysql-5.7/debian/master
-debian-tag	= mysql-5.7/debian/%(version)s
-upstream-branch	= mysql-5.7/upstream
-upstream-tag	= mysql-5.7/upstream/%(version)s
+debian-branch = master
 pristine-tar = True
