Import patches-unapplied version 5.7.17-0ubuntu0.16.04.2 to ubuntu/xenial-proposed
Imported using git-ubuntu import.

Changelog parent: af65363db52af958263e9b6df1df6b8e56c7581e

New changelog entries:
  * Add libjson-perl dependency for test suite (LP: #1631338)
    The last two python tests in the mtr suite were rewritten
    in perl, and require this package. Added for mysql-testsuite
    and as a build-dep.
  * Build with DWITH_LZ4=system (LP: #1631339)
    Package was previously built with bundled liblz4, though it
    was specified as a build-dep.
  * Add support for custom datadir to systemd service (LP: #1574782)
    The service was reporting an error if no database could be found in
    /var/lib/mysql. It now checks the location specified in the config.
    Note that user must still handle apparmor access for custom datadir.
  * Fix copy of soft-link datadir to /var/lib/mysql-upgrade (LP: #1474212)
    Upgrade would sometimes fail if mysql-upgrade already contained a
    link copy from a previous upgrade.
  * Escape special characters in password (LP: #1598992)
    Special characters in the root password would cause syntax errors
    and postinst failures.
  * Failing tests on platforms supported by upstream fail build (LP: #1646488)
    A passing test suite is now enforced on i386 and amd64 platforms at
    build-time.
  * d/copyright: Updated with information about new source files
  * Unstable test main.xa_prepared_binlog_off disabled pending upstream fix.
    Upstream bug report: http://bugs.mysql.com/bug.php?id=83340
  * d/lintian-overrides: Updated line numbers

--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: bison,
                libaio-dev[linux-any],
                libedit-dev,
                libevent-dev,
+               libjson-perl,
                liblz4-dev,
                libncurses5-dev (>= 5.0-6),
                libnuma-dev [amd64 arm64 i386 mips mips64el mipsel powerpc ppc64el],
@@ -26,7 +27,7 @@ Build-Depends: bison,
                po-debconf,
                psmisc,
                zlib1g-dev (>= 1:1.1.3-5)
-Standards-Version: 3.9.6
+Standards-Version: 3.9.7
 Homepage: http://dev.mysql.com/
 Vcs-Git: git://anonscm.debian.org/pkg-mysql/mysql-5.7.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-mysql/mysql-5.7.git
