Import patches-unapplied version 5.7.23-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: e0255f8e86cda64f59690ad578e2038b914eabd7

New changelog entries:
  [ Robie Basak ]
  * Drop dependency on bsdutils
  * Update Vcs-* URLs to salsa following migration
  [ Lars Tangvald ]
  * d/tests: Disable tests failing on ppc64el
  * d/patches: Fix failing tests on ppc64el

--- a/debian/rules
+++ b/debian/rules
@@ -151,6 +151,9 @@ else
 	# Tests that are known to be unstable on all platforms are skipped
 	# http://bugs.mysql.com/bug.php?id=83340
 	echo "main.xa_prepared_binlog_off	: unstable test" >> $(builddir)/mysql-test/skiplist
+	echo "main.type_float			: fails on ppc64el. Ref https://bugs.mysql.com/bug.php?id=92375" >> $(builddir)/mysql-test/skiplist
+	echo "main.type_newdecimal		: Same as above" >> $(builddir)/mysql-test/skiplist
+	echo "main.type_ranges			: Same as above" >> $(builddir)/mysql-test/skiplist
 
 	# Skip replication tests since they are timing sensitive and may
 	# result in false positives.
