--- a/debian/control
+++ b/debian/control
@@ -29,8 +29,8 @@ Build-Depends: bison,
                zlib1g-dev (>= 1:1.1.3-5)
 Standards-Version: 3.9.8
 Homepage: http://dev.mysql.com/
-Vcs-Git: https://anonscm.debian.org/git/pkg-mysql/mysql.git -b mysql-5.7/debian/master
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-mysql/mysql.git
+Vcs-Git: https://salsa.debian.org/mariadb-team/mysql.git -b mysql-5.7/debian/master
+Vcs-Browser: https://salsa.debian.org/mariadb-team/mysql
 XS-Testsuite: autopkgtest
 
 Package: libmysqlclient20
@@ -149,8 +149,7 @@ Architecture: any
 Recommends: libhtml-template-perl
 Suggests: mailx, tinyca
 Pre-Depends: adduser (>= 3.40), debconf, mysql-common (>= 5.5)
-Depends: bsdutils,
-         lsb-base (>= 3.0-10),
+Depends: lsb-base (>= 3.0-10),
          mysql-client-5.7 (>= ${binary:Version}),
          mysql-common (>= 5.8+1.0.4~),
          mysql-server-core-5.7 (= ${binary:Version}),
